--- a/.envExample
+++ b/.envExample
@@ -1,3 +1,3 @@
-EMAIL_USER = 'contact@geekyshows.com'
-EMAIL_PASS = '123456'
-EMAIL_FROM = 'contact@geekyshows.com'
+EMAIL_USER = 'astanait1@mail.ru'
+EMAIL_PASS = '1000mc'
+EMAIL_FROM = 'astanait1@mail.ru'
